Fixed multiple problems with the Inventory Sync API